# xpolkit

./: AUTHORS  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am  xpolkit-agent.desktop
src/: Makefile.am  xpolkit-agent.c
